--- a/react-front/public/index.html
+++ b/react-front/public/index.html
@@ -51,6 +51,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
     />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto&display=swap" rel="stylesheet">
 
     <title>React App</title>
   </head>
